# labs-cours-techniques-et-outils-de-dev

./: .gitlab-ci.yml  Dockerfile.1  Dockerfile.2  Lab7.sln  README.md  a.txt  b.txt  docker-compose.yml
Client/: Client.csproj  Dockerfile  Program.cs
Client/Properties/: launchSettings.json
DataContract/: Data.cs
Lab4/ex0/: main.cpp
Lab4/ex1/: main.cpp  util.h
Lab4/ex2/toCompile/: stuff.cpp
Lab4/ex3/: Makefile  main.cpp
Lab4/ex3/toCompile/: stuff.h  util.cpp
Lab4/ex4/: CMakeLists.txt
Lab4/ex4/projet1/: CMakeLists.txt  util.h
Server/: Dockerfile  Server.csproj
Server/Controllers/: DataController.cs
Server/Properties/: launchSettings.json
gitus-StartingPoint/: CMakeLists.txt  gitus.cpp
gitus-StartingPoint/git/: CMakeLists.txt  dummy.cpp  dummy.h
gitus-StartingPoint/tests/: CMakeLists.txt  catch.hpp  unittests.cpp
